--- a/index.html
+++ b/index.html
@@ -3,68 +3,89 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <title>Lojinha</title>
 </head>
 <body>
-    <h1>Lojinha da Unidade</h1>
 
-    <table>
+    <div class="container">
 
-        <thead>
-            <tr>
-                <th>Imagem</th>
-                <th>Produto</th>
-                <th>Preço Unitário</th>
-                <th>Qtd</th>
-                <th>Total</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>
-                    <img src="images/produto_1.jpg" alt="Produto 1" width="200">
-                </td>
-                <td>
-                    <div>Celular Top</div>
-                    <div>Código: 123456</div>
-                    <div>Cor: Preto</div>
-                </td>
-                <td>1000</td>
-                <td>0</td>
-                <td>0</td>
-            </tr>
-            <tr>
-                <td>
-                    <img src="images/produto_2.jpg" alt="Produto 2" width="200">
-                </td>
-                <td>
-                    <div>Notebook</div>
-                    <div>Código: 789789</div>
-                    <div>Cor: Cinza</div>
-                </td>
-                <td>2000</td>
-                <td>0</td>
-                <td>0</td>
-            </tr>
-            <tr>
-                <td>
-                    <img src="images/produto_3.jpg" alt="Produto 3" width="200">
-                </td>
-                <td>
-                    <div>Televisão</div>
-                    <div>Código: 789789</div>
-                    <div>Cor: Cinza</div>
-                </td>
-                <td>2000</td>
-                <td>0</td>
-                <td>0</td>
-            </tr>
-        </tbody>
-    </table>
+        <h1 <i class="bi bi-currency-dollar"></i>Lojinha da Unidade</h1>
 
-    <footer>
-        <span>Subtotal: R$ 0</span>
-    </footer>
+        <table class="table table-hover">
+
+            <thead>
+                <tr>
+                    <th>Imagem</th>
+                    <th>Produto</th>
+                    <th>Preço Unitário</th>
+                    <th>Qtd</th>
+                    <th>Total</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>
+                        <img src="images/produto_1.jpg" alt="Produto 1" width="200">
+                    </td>
+                    <td>
+                        <div>Celular Top</div>
+                        <div>Código: 123456</div>
+                        <div>Cor: Preto</div>
+                    </td>
+                    <td>1000</td>
+                    <td>
+                        <span class="badge bg-danger"><i class="bi bi-dash"></i></span>
+                        0
+                        <span class="badge bg-success"><i class="bi bi-plus"></i></span>
+                    </td>
+                    <td>0</td>
+                </tr>
+                <tr>
+                    <td>
+                        <img src="images/produto_2.jpg" alt="Produto 2" width="200">
+                    </td>
+                    <td>
+                        <div>Notebook</div>
+                        <div>Código: 789789</div>
+                        <div>Cor: Cinza</div>
+                    </td>
+                    <td>2000</td>
+                    <td>
+                    <span class="badge bg-danger"><i class="bi bi-dash"></i></span>
+                        0
+                    <span class="badge bg-success"><i class="bi bi-plus"></i></span>
+                    </td>
+                    <td>0</td>
+                </tr>
+                <tr>
+                    <td>
+                        <img src="images/produto_3.jpg" alt="Produto 3" width="200">
+                    </td>
+                    <td>
+                        <div>Televisão</div>
+                        <div>Código: 789789</div>
+                        <div>Cor: Cinza</div>
+                    </td>
+                    <td>2000</td>
+                    <td>
+                    <span class="badge bg-danger"><i class="bi bi-dash"></i></span>
+                        0
+                    <span class="badge bg-success"><i class="bi bi-plus"></i></span>
+                    </td>
+                    <td>0</td>
+                </tr>
+            </tbody>
+        </table>
+
+        <footer class="text-center">
+            <span><i class="bi bi-cart-check"></i> Subtotal: R$ 0</span>
+        </footer>
+
+    </div>
+
+    
 
 </body>
 </html>
