--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Lojinha</title>
 </head>
 <body>
 
     <div class="container">
 
-        <h1 <i class="bi bi-currency-dollar"></i>Lojinha da Unidade</h1>
+        <h1 <i id="cifrao" class="bi bi-currency-dollar"></i>Lojinha da Unidade</h1>
 
         <table class="table table-hover">
 
@@ -31,8 +32,8 @@
                     </td>
                     <td>
                         <div>Celular Top</div>
-                        <div>Código: 123456</div>
-                        <div>Cor: Preto</div>
+                        <div><span class="produto-item">Código:</span> 123456</div>
+                        <div><span class="produto-item">Cor:</span> Preto</div>
                     </td>
                     <td>1000</td>
                     <td>
@@ -48,8 +49,8 @@
                     </td>
                     <td>
                         <div>Notebook</div>
-                        <div>Código: 789789</div>
-                        <div>Cor: Cinza</div>
+                        <div><span class="produto-item">Código:</span> 789789</div>
+                        <div><span class="produto-item">Cor:</span> Cinza</div>
                     </td>
                     <td>2000</td>
                     <td>
@@ -65,8 +66,8 @@
                     </td>
                     <td>
                         <div>Televisão</div>
-                        <div>Código: 789789</div>
-                        <div>Cor: Cinza</div>
+                        <div><span class="produto-item">Código:</span> 789789</div>
+                        <div><span class="produto-item">Cor:</span> Cinza</div>
                     </td>
                     <td>2000</td>
                     <td>
