--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <script src="js/funcoes.js"></script>
     <title>Lojinha</title>
 </head>
 <body>
@@ -35,13 +36,13 @@
                         <div><span class="produto-item">Código:</span> 123456</div>
                         <div><span class="produto-item">Cor:</span> Preto</div>
                     </td>
-                    <td>1000</td>
+                    <td id="valor_1">R$ 1000</td>
                     <td>
-                        <span class="badge bg-danger"><i class="bi bi-dash"></i></span>
-                        0
-                        <span class="badge bg-success"><i class="bi bi-plus"></i></span>
+                        <span class="badge bg-danger" onclick="alterarQtd(1, '-')"><i class="bi bi-dash"></i></span>
+                        <span id="qtd_1">0</span>
+                        <span class="badge bg-success" onclick="alterarQtd(1, '+')"><i class="bi bi-plus"></i></span>
                     </td>
-                    <td>0</td>
+                    <td id="total_1">0</td>
                 </tr>
                 <tr>
                     <td>
@@ -52,13 +53,13 @@
                         <div><span class="produto-item">Código:</span> 789789</div>
                         <div><span class="produto-item">Cor:</span> Cinza</div>
                     </td>
-                    <td>2000</td>
+                    <td id="valor_2">R$ 2000</td>
                     <td>
-                    <span class="badge bg-danger"><i class="bi bi-dash"></i></span>
-                        0
-                    <span class="badge bg-success"><i class="bi bi-plus"></i></span>
+                    <span class="badge bg-danger" onclick="alterarQtd(2, '-')"><i class="bi bi-dash"></i></span>
+                    <span id="qtd_2">0</span>
+                    <span class="badge bg-success" onclick="alterarQtd(2, '+')"><i class="bi bi-plus"></i></span>
                     </td>
-                    <td>0</td>
+                    <td id="total_2">0</td>
                 </tr>
                 <tr>
                     <td>
@@ -69,19 +70,19 @@
                         <div><span class="produto-item">Código:</span> 789789</div>
                         <div><span class="produto-item">Cor:</span> Cinza</div>
                     </td>
-                    <td>2000</td>
+                    <td id="valor_3">R$ 3000</td>
                     <td>
-                    <span class="badge bg-danger"><i class="bi bi-dash"></i></span>
-                        0
-                    <span class="badge bg-success"><i class="bi bi-plus"></i></span>
+                    <span class="badge bg-danger" onclick="alterarQtd(3, '-')"><i class="bi bi-dash"></i></span>
+                    <span id="qtd_3">0</span>
+                    <span class="badge bg-success" onclick="alterarQtd(3, '+')"><i class="bi bi-plus"></i></span>
                     </td>
-                    <td>0</td>
+                    <td id="total_3">0</td>
                 </tr>
             </tbody>
         </table>
 
         <footer class="text-center">
-            <span><i class="bi bi-cart-check"></i> Subtotal: R$ 0</span>
+            <span><i class="bi bi-cart-check"></i> Subtotal: <span id="subtotal">R$ 0</span></span>
         </footer>
 
     </div>
